--- a/Index.html
+++ b/Index.html
@@ -40,6 +40,7 @@
         </div>
     </div>
     <script src="eventBubbling.js"></script>
+    <script type="module" src="useModule.js"></script>
 </body>
 
 </html>
