--- a/Index.html
+++ b/Index.html
@@ -39,6 +39,8 @@
             </div>
         </div>
     </div>
+    <script src="test.js"></script>
+
     <script src="eventBubbling.js"></script>
     <script type="module" src="useModule.js"></script>
 </body>
